Adding records for returns ,api mapper and add some endpoints